# E-trading-platform

./: .gitignore  CMakeLists.txt  README.md
data/: buyerdata.json
doc/: class.drawio  module.drawio
include/server/user/: buyer.h  shoper.h  user.h
include/utils/: execption.h  user_utils.h
src/: main.cpp
src/server/user/: user.cpp
stage_1/: addproductwindow.cpp  loginwindow.cpp  loginwindow.h  loginwindow.ui  product.cpp  user.cpp
stage_1/data/: chart.data  product.data
stage_1/src/: addproductwindow.h  addproductwindow.ui  backend.cpp  backend.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  modifyproductwindow.cpp  modifyproductwindow.h  modifyproductwindow.ui  product.h  stage_1.pro  user.h
stage_2/: addproductwindow.cpp  addproductwindow.h  backend.h  loginwindow.h  mainwindow.ui  modifyproductwindow.cpp  modifyproductwindow.ui  product.cpp  stage_2.pro  user.h
stage_2/data/: user.data
stage_2/src/: backend.cpp  chart.cpp  chart.h  loginwindow.cpp  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  modifyproductwindow.h  product.h  user.cpp
stage_3/public/: chart.cpp  chart.h  product.cpp  product.h  user.cpp  user.h  utils.h
stage_3/stage_3_client/: addproductwindow.h  addproductwindow.ui  loginwindow.cpp  mainwindow.cpp  mainwindow.ui  modifyproductwindow.cpp  modifyproductwindow.h  modifyproductwindow.ui  stage_3_client.pro
stage_3/stage_3_client/src/: addproductwindow.cpp  loginwindow.h  main.cpp  mainwindow.h
stage_3/stage_3_server/: main.cpp  mainwindow.h  server.cpp
stage_3/stage_3_server/src/: backend.cpp  backend.h  server.h  (+3 more)
